# final_challenge2024

fc_msgs/: CMakeLists.txt  package.xml
fc_msgs/action/: FindPath.action  NavigateToPose.action
fc_msgs/msg/: StopLightLocation.msg  StopLightPixel.msg
fc_msgs/srv/: LaneProject.srv  UvToXy.srv  XyToUv.srv
final_challenge/: package.xml  setup.py
final_challenge/city_driving/stop_detector/: stop_detector.py
final_challenge/final_challenge/: fakepublish.py  homography_client.py  homography_service.py  line_detector.py
final_challenge/final_challenge/luigi/: PID.py  basement_point_publisher.py  example_service.py  integration.py  lane_projection.py  lane_projection_server.py  navigation_server.py  particle_filter.py  path_plan_server.py  point_publisher.py  service_state  state_machine.py  stoplight.py  trajectory_planner.py  turn_around_state.py  utils.py  yeet.py
final_challenge/final_challenge/stop_commands/: parking_controller.py  parking_controller_stoplight.py  parking_controller_stopsign.py  safety_controller.py  safety_irl_params.yaml  safety_sim_params.yaml
final_challenge/final_challenge/stop_detector/: detector.py  homography_transformer.py  parking_controller.py  stop_detector.py  stop_light_crazy_ml.py  stop_light_detector.py  stop_light_segmentation.py
final_challenge/launch/: projection_test.launch.xml  real_luigi_launch.launch.xml  real_track_launch.launch.xml  right_lane.launch.xml  right_lane_yeet.launch.xml  stop_light.launch.xml  stop_sign.launch.xml
final_challenge/msg/: StopSign.msg
install/: setup.sh
install/fc_msgs/share/fc_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  (+5 more)
log/: latest_build
(+142 files in other folders)
