<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fc_msgs</name>
  <version>0.0.0</version>
  <description>Final Challenge Custom Messages</description>
  <maintainer email="jrales@mit.edu">Jospeh</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <depend>action_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
